--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 13.04.2022 07:10:54</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 13.04.2022 07:35:48</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,24 +7,24 @@
 <h5>Středa, 13. 04. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Hrachová s párkem</strong>
+<strong>Dršťková</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Zapečené flíčky s uzeným masem, okurka</strong>
+<strong>Vepřová plec na paprice s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							129,-
+							135,-
 						</span>
 </p>
 <p>
-<strong>Svíčková na smetaně s houskovým knedlíkem</strong>
+<strong>Smažený sýr s hranolkami a tatarkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							139,-
+							135,-
 						</span>
 </p>
 <p>
